gts-macros/tests/compile_fail/gts_id_missing_prefix.stderr
error: gts_id!: invalid GTS ID pattern: Invalid GTS segment #1 @ offset 4: 'x.foo': Too few tokens (got 2, min 5). Expected format: gts.vendor.package.namespace.type.vMAJOR[.MINOR]
 --> tests/compile_fail/gts_id_missing_prefix.rs:7:21
  |
7 |     let _ = gts_id!("x.foo");
  |                     ^^^^^^^
